--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   color: white;
   display: inline;
   margin: 10px;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 .myPic {
   width: 20em;
@@ -56,7 +56,7 @@ section {
 
 #submit-button {
   margin: auto;
-  font-size: 125%;
+  font-size: 1em;
   padding: 10px;
   font-family: "Mouse Memoirs", sans-serif;
   width: 35%;
@@ -64,7 +64,7 @@ section {
 
 .date {
   background-color: cornsilk;
-  font-size: 200%;
+  font-size: 2em;
   font-family: "Mouse Memoirs", sans-serif;
   border: solid 3px red;
   margin: auto;
@@ -90,8 +90,11 @@ section {
 }
 
 @media (max-width: 800px) {
-  .flex-item-right,
-  .flex-item-left {
-    flex: 100%;
+  .superstar,
+  .date {
+    font-size: 1em;
+  }
+  #submit-button {
+    font-size: 0.5em;
   }
 }
